[package]
edition = "2021"
name = "tng"
version = "2.2.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
again = "0.1.2"
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
auto_enums = {version = "0.8", features = ["std", "tokio1"]}
axum = "0.8.4"
bytes = "1.10.1"
cidr = {version = "0.2.3", features = ["serde"]}
clap = {version = "4.5.39", features = ["derive"]}
console-subscriber = {version = "0.4.1", optional = true}
const_format = "0.2.34"
ctrlc = {version = "3.4.7", features = ["termination"]}
derivative = "2.2.0"
either = "1.15.0"
fast-socks5 = {git = "https://github.com/dizda/fast-socks5.git", rev = "4c8985c"}
flume = {version = "0.11.1", features = ["async"]}
futures = "0.3.31"
getrandom = {version = "0.3"}
h2 = {version = "0.4.10", features = ["stream"]}
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = {version = "1", features = ["full"]}
hyper-rustls = {version = "0.27.6", default-features = false, features = ["http1", "logging", "native-tokio", "tls12", "ring", "http2"]}
hyper-util = {version = "0.1.14", features = ["service"]}
indexmap = {version = "2.9.0", features = ["serde"]}
itertools = "0.14.0"
nix = {version = "0.29.0", features = ["process", "signal", "socket", "net"]}
once_cell = "1.21.3"
opentelemetry = "0.29.1"
opentelemetry-otlp = {version = "0.29.0", default-features = false, features = [
  "logs",
  "metrics",
  "grpc-tonic",
  "gzip-tonic",
  "tls-webpki-roots",
  "reqwest-client",
  "http-proto",
  "http-json",
  "reqwest-rustls-webpki-roots",
]}
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = {version = "0.29.0", features = [
  "experimental_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
  "experimental_logs_batch_log_processor_with_async_runtime",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "rt-tokio",
]}
pin-project = "1"
portpicker = "0.1.1"
rand = "0.9.1"
rats-cert = {git = "https://github.com/inclavare-containers/rats-rs.git", rev = "7c81fb9d609c307989e74edfea0f327177212347", default-features = false, features = ["attester-coco", "verifier-coco", "crypto-rustcrypto"]}
regex = "1.11.1"
reqwest = {version = "0.12.19", default-features = false, features = ["json", "h2", "rustls-tls-webpki-roots"]}
rustls = {version = "0.23.27", default-features = false, features = ["logging", "std", "tls12", "ring", "brotli"]}
rustls-pemfile = "2.2.0"
scopeguard = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
serde_variant = "0.1.3"
serde_with = {version = "3.12.0", features = ["json"]}
shadow-rs = {version = "=1.0.0", default-features = false}
socket2 = "0.5.10"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.20.0"
tokio = {version = "1.45.1", features = ["rt-multi-thread", "sync", "tracing"]}
tokio-graceful = "0.2.2"
tokio-rustls = {version = "0.26.2", default-features = false, features = ["logging", "tls12", "ring"]}
tokio-util = "0.7.15"
tonic = "0.12.3"
tower = {version = "0.5", features = ["make", "util"]}
tower-http = {version = "0.6.6", features = ["trace", "set-header"]}
tracing = "0.1"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
which = "7.0.3"

[build-dependencies]
shadow-rs = {version = "=1.0.0", default-features = false, features = ["tzdb", "build"]}

[dev-dependencies]
ctor = "=0.4.1"

[features]
default = ["tokio-console"]
tokio-console = ["dep:console-subscriber"]
