[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tng"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
again = {workspace = true}
anyhow = {workspace = true}
async-stream = {workspace = true}
async-trait = {workspace = true}
auto_enums = {workspace = true}
base64 = {workspace = true}
bhttp = {git = "https://github.com/inclavare-containers/ohttp.git", rev = "990bc9a7add7025b020444c1a6802b500fb08e9a", features = ["http-compat"]}
bytes = {workspace = true}
chrono = {workspace = true}
cidr = {workspace = true}
clap = {workspace = true}
console-subscriber = {workspace = true, optional = true}
const_format = {workspace = true}
derivative = {workspace = true}
either = {workspace = true}
fast-socks5 = {workspace = true, optional = true}
futures = {workspace = true}
getrandom = {workspace = true}
h2 = {workspace = true}
hex = {workspace = true}
hpke = {workspace = true}
http = {workspace = true}
http-body = {workspace = true}
http-body-util = {workspace = true}
httparse = {workspace = true}
hyper = {workspace = true}
hyper-util = {workspace = true}
indexmap = {workspace = true}
itertools = {workspace = true}
nix = {workspace = true, features = ["process", "signal", "socket", "net"]}
ohttp = {git = "https://github.com/inclavare-containers/ohttp.git", rev = "ea5c92cd6c13a2326a6bbcf94b89a2da8d52cb88"}
opentelemetry = {workspace = true, optional = true}
opentelemetry-otlp = {workspace = true, features = [
  "logs",
  "metrics",
  "grpc-tonic",
  "gzip-tonic",
  "tls-webpki-roots",
  "reqwest-client",
  "http-proto",
  "http-json",
  "reqwest-rustls-webpki-roots",
], optional = true}
opentelemetry-stdout = {workspace = true, optional = true}
opentelemetry_sdk = {workspace = true, features = [
  "experimental_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
  "experimental_logs_batch_log_processor_with_async_runtime",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "experimental_metrics_custom_reader",
  "rt-tokio",
], optional = true}
peekable = {workspace = true, optional = true}
pin-project = {workspace = true}
pin-project-lite = {workspace = true}
portpicker = {workspace = true, optional = true}
prost = {workspace = true}
prost-types = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true, features = ["stream"]}
rustls = {workspace = true, default-features = false, features = ["logging", "std", "tls12", "ring", "brotli"]}
rustls-pemfile = {workspace = true}
scopeguard = {workspace = true}
serde = {workspace = true, features = ["rc"]}
serde_json = {workspace = true}
serde_variant = {workspace = true}
serde_with = {workspace = true}
serf = {workspace = true, optional = true}
sha2 = {workspace = true}
shadow-rs = {version = "=1.0.0", default-features = false}
spin = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
tempfile = {workspace = true}
thiserror = {workspace = true}
time = {workspace = true}
tokio-graceful = {workspace = true}
tokio-rustls = {workspace = true, default-features = false, features = ["logging", "tls12", "ring"]}
tokio-util = {workspace = true, features = ["compat"]}
tonic = {workspace = true, optional = true}
tower = {workspace = true, features = ["util"]}
tracing = {workspace = true}
tracing-futures = {workspace = true, features = ["futures-03"]}
tracing-opentelemetry = {workspace = true, optional = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
uuid = {workspace = true, features = ["v4"], optional = true}
which = {workspace = true, optional = true}
x509-cert = {workspace = true}

[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
async-tungstenite = {version = "0.25.1", optional = true, features = ["tokio-runtime"]}
atty = {workspace = true}
axum = {workspace = true, default-features = true, features = ["tokio", "http1", "http2", "ws"]}
notify = {workspace = true}
rats-cert = {path = "../rats-cert", default-features = false, features = ["crypto-rustcrypto", "attester-coco", "verifier-coco"]}
socket2 = {workspace = true}
tokio = {workspace = true, default-features = true, features = ["rt-multi-thread", "time", "process"]}
tower-http = {workspace = true, features = ["trace", "set-header", "cors", "compression-br", "compression-gzip", "compression-zstd"]}
ws_stream_tungstenite = {workspace = true}

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
axum = {workspace = true, default-features = false, features = ["json"]}# to disable mio
rats-cert = {path = "../rats-cert", default-features = false, features = ["crypto-rustcrypto", "verifier-coco"]}
ring = {workspace = true, features = ["wasm32_unknown_unknown_js"]}
rustls-pki-types = {version = "*", features = ["web"]}
serde-wasm-bindgen = {workspace = true}
tokio = {workspace = true, default-features = false}
tokio_with_wasm = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-time = {workspace = true}
ws_stream_wasm = {workspace = true}

[build-dependencies]
cfg_aliases = {workspace = true}
prost-build = {workspace = true}
shadow-rs = {workspace = true, default-features = false, features = ["tzdb", "build"]}

[dev-dependencies]
ctor = {workspace = true}
hyper = {workspace = true, features = ["http1", "http2", "client", "server"]}
once_cell = {workspace = true}
portpicker = {workspace = true}
serial_test = {workspace = true}

[features]
default = [
  "tokio-console",
  "metric",
  "trace",
  "ingress-all",
  "egress-mapping",
  "egress-all",
]

__egress-common = ["hyper/server", "dep:async-tungstenite", "dep:serf", "dep:peekable", "dep:uuid"]
egress-all = ["egress-mapping", "egress-netfilter"]
egress-mapping = ["__egress-common"]
egress-netfilter = ["__egress-common", "dep:which"]

__ingress-common = ["dep:async-tungstenite"]
ingress-all = ["ingress-http-proxy", "ingress-mapping", "ingress-netfilter", "ingress-socks5"]
ingress-http-proxy = ["__ingress-common", "hyper/client"]
ingress-mapping = ["__ingress-common"]
ingress-netfilter = ["__ingress-common", "dep:portpicker", "dep:which"]
ingress-socks5 = ["__ingress-common", "dep:fast-socks5"]

tokio-console = ["dep:console-subscriber", "tokio/tracing"]

metric = ["dep:tonic", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-stdout", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
trace = [
  "dep:tonic",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-stdout",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
]

# Builtin Attestation Service features
# __builtin-as should not be used directly. It is auto-enabled when any TEE-specific builtin feature is enabled
__builtin-as = ["rats-cert/__builtin-as"]
builtin-as-all = ["__builtin-as", "rats-cert/builtin-as-all"]
builtin-as-sgx = ["__builtin-as", "rats-cert/builtin-as-sgx"]
builtin-as-snp = ["__builtin-as", "rats-cert/builtin-as-snp"]
builtin-as-tdx = ["__builtin-as", "rats-cert/builtin-as-tdx"]
